--- a/Fduers/templates/login.html
+++ b/Fduers/templates/login.html
@@ -19,5 +19,9 @@
     </p>
     {% csrf_token %}
 </form>
+<form action="register/" method="get" name="form2">
+    <button>register</button>
+    {% csrf_token %}
+</form>
 </body>
 </html>
